# University-db

./: CMakeLists.txt
src/: database.cpp  database.hpp  employee.cpp  employee.hpp  main.cpp  person.cpp  person.hpp  student.cpp  student.hpp  tests.cpp  userinterface.cpp  userinterface.hpp
